Neatened appearance of filtered tables by preventing some titles and data from wrapping on to the next line. References issue #388

--- a/openrem/remapp/static/css/openrem-extra.css
+++ b/openrem/remapp/static/css/openrem-extra.css
@@ -317,3 +317,7 @@ input[type=range]::-ms-thumb {
   cursor: pointer;
   margin-top: 0px;
 }
+
+td.nowrap {
+  white-space: nowrap;
+}
